<resources>
    <string name="enter_age">Enter age</string>
    <string name="enter_height">Enter height (cm)</string>
    <string name="enter_weight">Enter weight (kg)</string>
    <string name="app_name">FitnessApp</string>
    <string name="title_activity_checker">Checker</string>
    <string name="title_activity_calories">Calories</string>
    <string name="title_activity_exercise">Exercise</string>
    <string name="title_activity_food">Food</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_steps">Steps</string>
    <string name="title_activity_tracker">Tracker</string>
    <string name="title_activity_calorieshome">Calories Menu</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="selected_intensity">Selected intensity:</string>
    <string name="select_intensity">Select daily activity</string>
    <string-array name="intensity">
        <item>Light</item>
        <item>Usual</item>
        <item>Moderate</item>
        <item>Hard</item>
        <item>Very hard</item>
        <item>Extreme</item>
    </string-array>
    <string name="select_gender">Select gender</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="consumption">Your calorie consumption:</string>
    <string name="nutrition">nutrition</string>
    <string name="recipe">recipe</string>


    <string name="nutritionSugar">Sugar</string>
    <string name="nutritionCarbohydrates">Carbohydrates</string>
    <string name="nutritionProtein">Protein</string>
    <string name="nutritionSaturatedFat">Saturated Fat</string>

    <string name="nutritionCalories">Calories</string>
    <string name="nutritionServingSize">Serving Size</string>
    <string name="nutritionFatTotal">Total Fat</string>



    <string name="tvServings">Servings</string>
    <string name="tvIngredients">Ingredients</string>
    <string name="tvInstructions">Instructions</string>
    <string name="muscle">muscle</string>
    <string name="title">Title</string>
    <string name="tvMuscle">Muscle</string>
    <string name="Exercises">Exercises</string>
    <string name="title_activity_exercises">Exercises</string>
    <string name="search_hint">search_hint</string>
    <string name="calculate">Calculate</string>
    <string name="calories">Total Daily Energy Expenditure</string>
    <string name="search_exercises_by_muscle">Search exercises by muscle...</string>
    <string name="menubutton">menubutton</string>
    <string name="checker">Check</string>
    <string name="send_request">Send Request</string>
    <string name="exercises">Exercises</string>
    <string name="exerciseSubtitle">Select a muscle group from the menu</string>
    <string name="tracker">tracker</string>
    <string name="enter_weighttracker">Enter weight</string>
    <string name="enter_date_yyyy_mm_dd">Enter date (yyyy-mm-dd)</string>
    <string name="save">Save</string>
    <string name="info">Info</string>
</resources>